feat(handler): add internal server error response
