# api.yml
@@ -17,29 +17,6 @@ info:
 servers:
   - url: http://localhost
 paths:
-  /hello:
-    get:
-      summary: This is just a test endpoint to get you started.
-      parameters:
-        - name: id
-          in: query
-          required: true
-          schema:
-            type: integer
-      responses:
-        '200':
-          description: Test return
-          content:
-            application/json:    
-              schema:
-                $ref: "#/components/schemas/HelloResponse"
-        '404':
-          description: Not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponse"
-
   /estate:
     post:
       summary: Create a palm estate
@@ -62,6 +39,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/BadRequest'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/InternalServerError'
                 
   /estate/{estate_id}/tree:
     post:
@@ -98,6 +81,12 @@ paths:
             application/json:
               schema: 
                 $ref: '#/components/schemas/BadRequest'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/InternalServerError'
                 
   /estate/{estate_id}/stats:
     get:
@@ -122,6 +111,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorNotFound'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/InternalServerError'
         
   /estate/{estate_id}/drone-plan:
     get:
@@ -152,6 +147,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorNotFound'
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/InternalServerError'
           
       
 components:
@@ -245,24 +246,15 @@ components:
       required:
         - error
           
-    MissingField:
+    InternalServerError:
       type: object
       properties:
         error:
           type: string
-          example: "width properties is required"
-    WrongDatatype:
-      type: object
-      properties:
-        error:
-          type: string
-          example: "value must be integer"
-    WrongMinValue:
-      type: object
-      properties:
-        error:
-          type: string
-          example: value must be more than > 0 and < 1000000
+          example: "unknown error"
+      required:
+        - error
+        
     CreateTreeRequestPayload:
       type: object
       properties:
@@ -303,19 +295,3 @@ components:
           example: estate id is not found
       required:
         - error
-
-    HelloResponse:
-      type: object
-      required:
-        - message
-      properties:
-        message:
-          type: string
-          example: Hello, World!
-    ErrorResponse:
-      type: object
-      required:
-        - message
-      properties:
-        message:
-          type: string
